fix wrapping menu headers

--- a/src/component/layout/Navigation.css
+++ b/src/component/layout/Navigation.css
@@ -62,6 +62,7 @@
    width: auto;
    /* relative position */
    position: relative;
+   white-space: nowrap;
 }
 
 .nav-bar li:hover {
